# Senior-MESH

./: Questions_for_Dr_Eisenstadt.docx  Questions_for_Eisenstadht.docx  Questions_for_Eisenstadt.docx  README.md  XBee cancellation.docx  notes.docx  ~$notes.docx
Final NeoCortec system code/: README.md
Final NeoCortec system code/test/: CMakeLists.txt  NcApi.c  test.c
Final NeoCortec system code/testv2/: CMakeLists.txt  testv2.c
Final NeoCortec system code/testv7/: CMakeLists.txt  testv7.c
NeoCortec/ADC read and Pico transmit code/test/: NcApi.h  NcApiExample.c  NcApiExampleCallback.c  NeoParser.h  test.c
NeoCortec/test/: test.c  test_updated.c
Pico Code/: Sensor_ADC.py
Pico Materials/: rp2-pico-20221004-unstable-v1.19.1-469-g95c614e2b.uf2
Pico Materials/ADC code/testv2/: testv2.c
Pico Materials/Code/: I2C_Template.py  SPI_SDCard.py  Sensor_ADC.py  UART_Template.py
Pico Materials/Code/SPI_SDCard/: main.py
Pico Materials/Code/UART_Template/: main.py
Pico Materials/Code/UARTread to write SDCard/: main.py
Pico Materials/Code/UARTread_Template/: main.py
Pico Materials/Code/UARTwrite_Template/: main.py
Pico Materials/Code/lib/: sdcard.py
Pico Materials/SD Card code/testv3/: CMakeLists.txt  testv3.c
XBee Materials/Digimesh Restructured code/: main.py
XBee Materials/XBee UART Demo/: UART_Template.py  main.py
sketch_esp8266AnalogMux/sketch_esp8266AnalogMux/: sketch_esp8266AnalogMux.ino
